# drf-favoriteproduct-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yaml  manage.py  pyproject.toml  ruff.toml
base/: exceptions.py  model_mixins.py  pagination.py  serializers.py  services.py  urls.py  views.py
config/: env_config.py  urls.py
config/settings/: base.py  dev.py
db_dump/: products_product.json  users_customuser.json
products/: admin.py  dtos.py  models.py  serializers.py  urls.py
products/exceptions/: add_favorite_service.py  base.py  delete_favorite_service.py
products/migrations/: 0001_initial.py
products/services/: __init__.py  add_favorite_service.py  delete_favorite_service.py
products/tests/unit/: test_add_favorite_service.py  test_delete_favorite_service.py
products/views/: __init__.py  favorites.py  products.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
